--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "start-dev-server": "NODE_ENV=development nodemon ./build/app/bin/www",
     "start-pro-server": "NODE_ENV=production node ./build/app/bin/www",
     "start-pm2-pro-server": "NODE_ENV=production pm2 start ./build/app/bin/www.js --name admin",
+    "start-docker": "NODE_ENV=production-docker ts-node-dev --poll typeScript/app/bin/www.ts",
     "mocha-ts": "SET NODE_ENV=test&& mocha -r ts-node/register test/hooks.test.ts --require mocha-steps --timeout 1000000000 --exit",
     "mocha-ts-server": "NODE_ENV=test mocha -r ts-node/register test/hooks.test.ts --require mocha-steps --timeout 1000000000 --exit",
     "eslint": "eslint typeScript/**/*.ts"
@@ -24,6 +25,7 @@
     "@types/chai": "^4.3.0",
     "@types/express": "^4.17.13",
     "@types/mocha": "^9.0.0",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^16.10.3",
     "@types/passport": "^1.0.7",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
@@ -36,7 +38,6 @@
     "mocha": "^9.1.2",
     "mocha-steps": "^1.3.0",
     "nodemon": "^2.0.13",
-    "ts-node": "^10.4.0",
     "typescript": "^4.4.3"
   },
   "dependencies": {
@@ -54,14 +55,11 @@
     "express-session": "^1.17.2",
     "express-validator": "^6.13.0",
     "helmet": "^4.6.0",
-    "i18n": "^0.13.3",
+    "i18n": "^0.15.0",
     "jsonwebtoken": "^8.5.1",
-    "mochawesome": "^6.3.1",
-    "module-alias": "^2.2.2",
     "mongodb": "^4.1.3",
     "mongoose": "^6.0.10",
     "mongoose-paginate": "^5.0.3",
-    "mongoose-sequence": "^5.3.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.3",
     "passport": "^0.5.0",
@@ -71,6 +69,8 @@
     "passport-local": "^1.0.0",
     "swagger-jsdoc": "^6.0.0",
     "swagger-ui-express": "^4.2.0",
+    "ts-node": "^10.7.0",
+    "ts-node-dev": "^1.1.8",
     "unique-string": "^2.0.0",
     "validator": "^13.6.0",
     "winston": "^3.3.3"
